2006-12-11  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.c: don't message "Image saved" from here.

	* app/core/gimpimage.[ch]: introduced new signal "saved".

	* app/file/file-save.c (file_save): call gimp_image_saved() from here.

	* app/display/gimpdisplay-handlers.c: connect to GimpImage::saved
	and show the "Image saved" message. Makes it show up on all displays
	and regardless of how the file was saved.

	* app/display/gimpdisplay.c: fixed typo in comment.

2006-12-11  Sven Neumann  <sven@gimp.org>

	* app/actions/file-actions.c
	* app/actions/file-commands.[ch]
	* app/display/gimpdisplayshell-close.c: introduced new action
	'file-save-and-close' and moved display deletion there.

2006-12-11  Michael Natterer  <mitch@gimp.org>

	* app/file/file-open.c (file_open_layers): use the image file's
	basename as layer name if we import only one layer or if
	merge_visible was requested. Use "basename - layer name"
	otherwise. Fixes bug #384472.

2006-12-11  Sven Neumann  <sven@gimp.org>

	* app/core/gimptooloptions.[ch]: added API to delete saved
	tool-options.

	* app/tools/gimp-tools.c: don't deal with saving presets, just
	load them on startup. Create the tool-options directory when
	saving tool-options.

	* app/core/gimptoolpresets.[ch]: added new signal that is emitted
	whenever the presets changes. Create the tool-options directory
	when saving a preset.

	* app/widgets/gimptooloptionseditor.[ch]: listen to the "changed"
	signal of GimpToolPresets and queue an idle save.

2006-12-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c: reset to factory defaults instead of
	popping up a warning dialog when the user clicks "Load Defaults"
	and hasn't saved default values yet (bug #384673).

2006-12-11  Sven Neumann  <sven@gimp.org>

	* app/actions/tool-options-commands.c
	* app/core/gimptoolpresets.[ch]
	* app/tools/gimp-tools.c: code cleanup.

2006-12-10  Sven Neumann  <sven@gimp.org>

	* app/actions/tool-options-commands.c